<resources>
    <string name="app_name">REPACE</string>
    <string name="facebook_app_id" translatable="false">995930227927922</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb995930227927922</string>
    <string name="access_token" translatable="false">pk.eyJ1Ijoib2JlbGFiIiwiYSI6ImNrd3d6MnRqazA4bnIydXExajJpaWdmaDkifQ.ndQFEW82g3GS9MMaQjca-g</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoib2JlbGFiIiwiYSI6ImNrdGptc2V5cDFkNHEzMG40MjN6bW13dXYifQ.vmRkkaiJLrxsJNwOG0Y70w</string>
    <string name="app_center_key" translatable="false">a65fa86f-198b-461f-b2d6-17567440175b</string>
    <string name="failure_network_connection">Network error occurred. Please try again.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_movies_list_unavailable">Movies Unavailable.</string>
    <string name="failure_movie_non_existent">Movie Not Existent.</string>
    <string name="failure_exception">An exception error occurred</string>
    <string name="invalid_email">Invalid Email, Please Try Again.</string>
    <string name="invalid_password">Password Must Be 8-10 Characters And Contain Both Numbers And Letters. Please Try Again.</string>
    <string name="invalid_confirm_password">Password Do Not Match.\nPlease Try Again</string>
    <string name="invalid_nickname">Existing Nickname. Please Try Again.</string>
    <string name="invalid_send_email">Instructions on resetting Password has been sent to your email address.</string>
    <string name="unfriend">Unfriend</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="request">Request</string>
    <string name="cancle_request">Cancel Request</string>
    <string name="invite_friend">Invite a Friend to REPACE</string>
    <string name="invite">Invite</string>
    <string name="friend_list">Friend List</string>
    <string name="don_any_friend">You don\'t have any friends.</string>
    <string name="any_friend">You didn\'t get any friend requests.</string>
    <string name="friend_request">Friend Request</string>
    <string name="search_friends_face">Search Friend from Facebook</string>
    <string name="friend_rec">Friend Recommendation</string>
    <string name="search_friends">Search by NickName or Email address</string>
    <string name="action_refresh">Refresh</string>
    <string name="user_name">USER NAME</string>
    <string name="content_description_empty">No content description.</string>
    <string name="text_policy">\u0020 \u0020 \u0020 \u0020 Check to receive notifications on activity reminders, Prescription (Rx) exercise schedules, events, benefits, and latest updates. (Optional)</string>
    <string name="text_policy_sub">By signing up, you agree to REPACE’s </string>
    <string name="double_back_to_exit">Please click BACK again to exit</string>
    <string name="available_nickname">Available Nickname.</string>
    <string name="intro_additional_info">For a more accurate prescription exercise solution, we will need the following information. Additional information will help us personalize your exercise plan.</string>
    <string name="welcome_content">Start making your physical exercise more scientific and effective with REPACE at your side.!</string>
    <string name="welcome_tutorial">Welcome to REPACE Prescription (Rx) Exercise Program!</string>
    <string name="setup_device">Set Up Your REPACE Device</string>
    <string name="remind_pairing">Make Sure Your REPACE Device Is Turned On If It Is Fresh Out Of The Box.</string>
    <string name="allowing_access">By allowing access, REPACE will be able to send your activity reminders, exercise data, etc.</string>
    <string name="re_open_app_to_change_language">Please reopen the app to update the language</string>
    <string name="app_version">Ver</string>
    <string name="heartrate">Heartrate</string>
    <string name="SmO2" translatable="false">SmO2</string>
    <string name="rx_exercise">Rx Exercise</string>
    <string name="stage">Stage</string>
    <string name="lactate_onset">Lactate Onset</string>
    <string name="lactate_onset_secondary">Lactate onset</string>
    <string name="onset">Onset</string>
    <string name="SmO2_at_Lactate_4mmol">SmO2 at Lactate 4mmol</string>
    <string name="run_for">Run for</string>
    <string name="check_info_exercise">Check Out the Information  from Your Latest Exercise</string>
    <string name="no_data_available">No Data Available</string>
    <string name="content_tutorial">Muscle oxygenation is particularly important for both endurance and power of a muscle because it is necessary to produce ATP to power muscle cells to contract. Heart rate and blood oxygen delivery are helpful for getting an idea of an athlete\\\'s efficiency, but they do not tell the whole story for the muscle.  \n\nPhysical exercise performed at different intensities promotes distinct physiological responses during both activity and recovery process.  High-intensity and short-volume efforts are widely used in the sports context and have also been extensively adopted in non-athlete training programs.  \n\nREPACE Prescription (Rx) Exercise Program utilizes muscle oxygenation level measured real-time during your exercise to provide the best Exercise Program suited to your body condition. \n\nStart now by completing LT TEST to find out what’s best for you.</string>
    <string name="or">or</string>
    <string name="title_dialog_google_login">REPACE wants to use “google.com” to Log In</string>
    <string name="title_dialog_facebook_login">REPACE wants to use “facebook.com” to Log In</string>
    <string name="title_dialog_google_signup">REPACE wants to use “google.com” to Sign up</string>
    <string name="title_dialog_facebook_signup">REPACE wants to use “facebook.com” to Sign up</string>
    <string name="content_dialog_google">This allows the app and the website to share information about you.</string>
    <string name="content_dialog_lt_test_stop">Are you sure you want to exit? \nWhen stopped, no data is saved.</string>
    <string name="content_dialog_free_lt_test">Are you sure you want to exit? \nWhen stopped, data will be saved</string>
    <string name="lt_test">LT Test</string>
    <string name="short_lt_test_info">You can estimate your Lactate Onset timing simply by running in accordance with LT TEST guidance.\n\nYou can obtain a more accurate information by complying with a few simple conditions.</string>
    <string name="more_lt_test_info">REPACE measures your muscle oxygenation (SmO2) while you exercise and allows you to check when your muscles have reached increased use of carbohydrates by calculating the timing of the first Lactate Onset.\n\nYour muscles use up more oxygen in the body during exercise than when you are relaxing or resting.
\n\nFor your body to remain physically fit to endure challenging activities and improve cardiovascular fitness at the same time, it is important to delay the timing of the first Lactate Onset (i.e., rightward shift of the exponential lactate curve) by keeping up with regular exercises with intensity level just right for you.
\n\nREPACE will help you deal with such first Lactate Onset time. Become a smart runner and perform regular LT TESTs to determine what exercise level is right for you. Follow the Prescription Exercise (Rx Exercise) recommended by REPACE and see whether first Lactate Onset time has indeed been delayed for your improving endurance.
\n\nFor best results, it is important to perform LT TEST as well as Prescription Exercises in an environment that offers consistent pace and speed, such as at a treadmill.</string>
    <string name="tl_test_sub_title">Lactate Threshold Test (LT Test)</string>
    <string name="lt_test_summary_off_intro_sub1">LT TEST takes into account the amount of exercises that you do in your daily life. REPACE measures and analyzes SmO2 shown during each LT TEST Stage.</string>
    <string name="lt_test_summary_off_intro_sub2">Each Stage consists of 5minute running, and automatically ends when the targeted exercise amount is met.</string>
    <string name="lt_test_user_manual_sub1">For a more accurate result, Treadmill Running LT TEST is recommended.</string>
    <string name="lt_test_user_manual_sub2">Personalized Prescription Exercise is accessible when LT TEST is complete.</string>
    <string name="warning_press_stop">Prescription (Rx) Exercise will not be available if you press STOP at any time before LT TEST is complete</string>
    <string name="lt_test_protocol">LT Test Protocol</string>
    <string name="e_mail">E-mail</string>
    <string name="start_speed">Start Speed</string>
    <string name="increase_speed_stage">Increase in Speed / Stage</string>
    <string name="rest_time">Rest Time</string>
    <string name="stage_time">Stage Time</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="km_h" translatable="false">km/h</string>
    <string name="percent" translatable="false">%</string>
    <string name="bpm" translatable="false">bpm</string>
    <string name="kcal" translatable="false">kcal</string>
    <string name="test_on">Test On</string>
    <string name="test">Test</string>
    <string name="treadmill">Treadmill</string>
    <string name="outdoor">Outdoor</string>
    <string name="user_type">User Type</string>
    <string name="ordinary_person">Ordinary \nPerson</string>
    <string name="sportsman_running">Sportsman \n(Running)</string>
    <string name="sportsman_etc">Sportsman \n(etc.)</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="number">Number</string>
    <string name="hour_day">Hour / Day</string>
    <string name="km_exercise">Km / Exercise</string>
    <string name="times_week">Times / Week</string>
    <string name="times_week_br">Times\n/Week</string>
    <string name="detail_hour_day">Average Exercise Duration performed per Day</string>
    <string name="will_start_in">Will Start in</string>
    <string name="quote" translatable="false">’’</string>
    <string name="run">RUN!</string>
    <string name="maintain_your_pace">Maintain Your Pace at</string>
    <string name="flat_outdoor_track">On Flat Outdoor Track</string>
    <string name="congratulations">Congratulations!</string>
    <string name="lt_test_complete">LT TEST is completed</string>
    <string name="trophies">Trophies</string>
    <string name="medals">Medals</string>
    <string name="badge">Badge</string>
    <string name="number_lt_test">Number of complete LT TEST</string>
    <string name="number_exercises">Number of consecutive exercises</string>
    <string name="exercise_accumulation">Exercise accumulation</string>
    <string name="text_goals">Trophies to congratulate you when you complete LT TEST</string>
    <string name="title_low_more">Low Intensity Exercise (L.I.E.)</string>
    <string name="content_low_bold_more">This is a competency improving exercise that facilitates your general endurance level (low to high-intensity exercise performance).</string>
    <string name="content_low_regular_more">Consistent and regular exercise is recommended.
\n\nLIE can improve fat oxidation and regeneration of the energy, resulting in enhanced recovery ability (improving first lactate onset).
\n\nThis is called improving metabolic flexibility, reflecting the ability to utilize efficiently fat and carbohydrate, mitochondrial function, and aerobic capacity.
\n\nFurthermore, LIE is helpful who train high-intensity exercises (strength and interval training). They need this recovery ability to optimize the repeated high-intensity exercise session because of the need for energy regeneration.</string>
    <string name="btn_later">Later</string>
    <string name="btn_start_pairing">Start Pairing</string>
    <string name="title_LT_Test">LT Test Result</string>
</resources>