<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:orientation="vertical">
    <include
        layout="@layout/header_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp">

        <ImageView
            android:id="@+id/imvMore"
            android:layout_width="77dp"
            android:layout_height="108dp"
            android:background="@drawable/img_low_exercise"/>

        <TextView
            android:id="@+id/tvTitleMore"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_low_more"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/notosanskr_regular"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitleContentBold"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_low_bold_more"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/notosanskr_regular"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitleContentRegular"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_low_regular_more"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/notosanskr_regular"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>