<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/header_back_bell" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin_secondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!--Will start in-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <TextView
                    android:text="@string/will_start_in"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvTimeStart"
                        android:text="30"
                        android:textSize="60sp"
                        android:textColor="@color/colorTextPrimary"
                        android:fontFamily="@font/bebasneue_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/quote"
                        android:textSize="60sp"
                        android:textColor="@color/colorTextPrimary"
                        android:fontFamily="@font/bebasneue_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <!--Stage-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <TextView
                    android:text="@string/stage"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextTitle"
                    android:textFontWeight="500"

                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvStage"
                    android:text="01"
                    android:textSize="60sp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/bebasneue_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imvTreadmill"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin_secondary"
                android:layout_width="wrap_content"
                android:layout_height="228dp"/>
            <TextView
                android:text="@string/maintain_your_pace"
                android:textSize="16sp"

                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvOutdoorSpeed"
                    android:text="3.6"
                    android:textSize="100sp"
                    android:lineHeight="120dp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/bebasneue_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/km_h"
                    android:textSize="20sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:text="@string/run"
                android:textSize="44dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_alert_triangle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <TextView
                    android:text="@string/flat_outdoor_track"
                    android:textColor="@color/colorAlertTriangle"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin_secondary"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imvBtnStop"
                android:src="@drawable/ic_btn_stop"
                android:layout_width="88dp"
                android:layout_height="88dp"/>
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_press_stop"
                android:textColor="@color/colorText"
                android:textSize="14sp"

                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"

                />

<!--            <TextView-->
<!--                android:text="@string/warning_press_stop"-->
<!--                android:textColor="@color/colorText"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->
        </LinearLayout>
    </LinearLayout>
</ScrollView>